welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: '<-' expected but integer literal found.
   for (i 1 <- 6 ) {
          ^Program:11: error: illegal start of simple expression
  }
  ^